--- a/config/defconfigs/geexbox-xbmc-i386-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-i386-generic.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120923-r15063"
+CONFIG_KERNELVERSION="devel-20121125-r15571"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -578,6 +578,7 @@ CONFIG_OPT_mesa_gallium3d=y
 CONFIG_OPT_mesa_egl=y
 CONFIG_OPT_mesa_opengles=y
 # CONFIG_OPT_mesa_openvg is not set
+# CONFIG_OPT_mesa_osmesa is not set
 CONFIG_OPT_mesa_intel=y
 CONFIG_OPT_mesa_radeon=y
 CONFIG_OPT_mesa_nouveau=y
@@ -722,6 +723,7 @@ CONFIG_PKG_libvdpau=y
 # CONFIG_PKG_mythplugins is not set
 # CONFIG_PKG_myththemes is not set
 # CONFIG_PKG_mythtv is not set
+# CONFIG_PKG_netflix-desktop is not set
 # CONFIG_PKG_noad is not set
 # CONFIG_PKG_qtmediahub is not set
 # CONFIG_PKG_sgx530-OpenGLES is not set
@@ -1109,9 +1111,8 @@ CONFIG_PKG_extra-fonts-nonfree=y
 # CONFIG_PKG_linux-perftools is not set
 CONFIG_PKG_lsof=y
 CONFIG_PKG_mc=m
+# CONFIG_PKG_msttcorefonts is not set
 CONFIG_PKG_nano=y
-# CONFIG_PKG_omapconf is not set
-# CONFIG_PKG_omapdrmtest is not set
 # CONFIG_PKG_oprofile is not set
 CONFIG_PKG_rtmpdump=y
 CONFIG_PKG_screen=m
@@ -1123,6 +1124,11 @@ CONFIG_OPT_usbutils_devtools=y
 # CONFIG_PKG_valgrind is not set
 CONFIG_PKG_vdpauinfo=y
 # CONFIG_PKG_wget is not set
+# CONFIG_PKG_wine is not set
+# CONFIG_PKG_wine-firefox is not set
+# CONFIG_PKG_wine-gecko is not set
+# CONFIG_PKG_wine-mono is not set
+# CONFIG_PKG_wine-silverlight is not set
 CONFIG_PKG_wscan=y
 CONFIG_PKG_xbmc-addon-geexbox-network=y
 CONFIG_PKG_xbmc-addon-geexbox-updater=y
