--- a/config/defconfigs/base-omap4-pandaboard.conf
+++ b/config/defconfigs/base-omap4-pandaboard.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120923-r15063"
+CONFIG_KERNELVERSION="devel-20121125-r15571"
 CONFIG_MODULES=y
 CONFIG_FLAVOUR_base=y
 # CONFIG_FLAVOUR_geexbox is not set
@@ -593,6 +593,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_mythplugins is not set
 # CONFIG_PKG_myththemes is not set
 # CONFIG_PKG_mythtv is not set
+# CONFIG_PKG_netflix-desktop is not set
 # CONFIG_PKG_noad is not set
 # CONFIG_PKG_omap-media-apps is not set
 # CONFIG_PKG_omapfbplay is not set
@@ -945,6 +946,9 @@ CONFIG_PKG_usbutils=y
 # CONFIG_PKG_valgrind is not set
 # CONFIG_PKG_vdpauinfo is not set
 # CONFIG_PKG_wget is not set
+# CONFIG_PKG_wine-firefox is not set
+# CONFIG_PKG_wine-gecko is not set
+# CONFIG_PKG_wine-mono is not set
 # CONFIG_PKG_wscan is not set
 # CONFIG_PKG_xbmc-addon-geexbox-network is not set
 # CONFIG_PKG_xbmc-addon-geexbox-updater is not set
