--- a/config/defconfigs/base-x86_64-generic.conf
+++ b/config/defconfigs/base-x86_64-generic.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120923-r15063"
+CONFIG_KERNELVERSION="devel-20121125-r15571"
 CONFIG_MODULES=y
 CONFIG_FLAVOUR_base=y
 # CONFIG_FLAVOUR_geexbox is not set
@@ -658,6 +658,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_mythplugins is not set
 # CONFIG_PKG_myththemes is not set
 # CONFIG_PKG_mythtv is not set
+# CONFIG_PKG_netflix-desktop is not set
 # CONFIG_PKG_noad is not set
 # CONFIG_PKG_qtmediahub is not set
 # CONFIG_PKG_sgx530-OpenGLES is not set
@@ -1006,9 +1007,8 @@ CONFIG_PKG_dialog=y
 # CONFIG_PKG_linux-perftools is not set
 # CONFIG_PKG_lsof is not set
 # CONFIG_PKG_mc is not set
+# CONFIG_PKG_msttcorefonts is not set
 # CONFIG_PKG_nano is not set
-# CONFIG_PKG_omapconf is not set
-# CONFIG_PKG_omapdrmtest is not set
 # CONFIG_PKG_oprofile is not set
 # CONFIG_PKG_rtmpdump is not set
 # CONFIG_PKG_screen is not set
@@ -1020,6 +1020,10 @@ CONFIG_OPT_usbutils_devtools=y
 # CONFIG_PKG_valgrind is not set
 # CONFIG_PKG_vdpauinfo is not set
 # CONFIG_PKG_wget is not set
+# CONFIG_PKG_wine-firefox is not set
+# CONFIG_PKG_wine-gecko is not set
+# CONFIG_PKG_wine-mono is not set
+# CONFIG_PKG_wine-silverlight is not set
 # CONFIG_PKG_wscan is not set
 # CONFIG_PKG_xbmc-addon-geexbox-network is not set
 # CONFIG_PKG_xbmc-addon-geexbox-updater is not set
