--- a/config/defconfigs/geexbox-xbmc-bcm2708-raspberrypi.conf
+++ b/config/defconfigs/geexbox-xbmc-bcm2708-raspberrypi.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120923-r15063"
+CONFIG_KERNELVERSION="devel-20121125-r15571"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -677,6 +677,7 @@ CONFIG_OPT_libbluray_aacs=y
 # CONFIG_PKG_mythplugins is not set
 # CONFIG_PKG_myththemes is not set
 # CONFIG_PKG_mythtv is not set
+# CONFIG_PKG_netflix-desktop is not set
 # CONFIG_PKG_noad is not set
 # CONFIG_PKG_omap-media-apps is not set
 # CONFIG_PKG_omapfbplay is not set
@@ -1050,6 +1051,7 @@ CONFIG_PKG_dialog=y
 # CONFIG_PKG_linux-perftools is not set
 # CONFIG_PKG_lsof is not set
 CONFIG_PKG_mc=m
+# CONFIG_PKG_msttcorefonts is not set
 # CONFIG_PKG_nano is not set
 # CONFIG_PKG_omapconf is not set
 # CONFIG_PKG_omapdrmtest is not set
@@ -1065,6 +1067,10 @@ CONFIG_OPT_usbutils_devtools=y
 # CONFIG_PKG_valgrind is not set
 # CONFIG_PKG_vdpauinfo is not set
 # CONFIG_PKG_wget is not set
+# CONFIG_PKG_wine-firefox is not set
+# CONFIG_PKG_wine-gecko is not set
+# CONFIG_PKG_wine-mono is not set
+# CONFIG_PKG_wine-silverlight is not set
 # CONFIG_PKG_wscan is not set
 CONFIG_PKG_xbmc-addon-geexbox-network=y
 CONFIG_PKG_xbmc-addon-geexbox-updater=y
