xf86-video-fglrx-legacy : fix x86_64 build

--- a/packages/xf86-video-fglrx-legacy/build
+++ b/packages/xf86-video-fglrx-legacy/build
@@ -23,6 +23,8 @@ $SCRIPTS/build linux
 
 cd $PKG_BUILD_DIR
 
+sed -i -e 's/-DPAGE_ATTR_FIX=/-DCOMPAT_ALLOC_USER_SPACE=arch_compat_alloc_user_space -DPAGE_ATTR_FIX=/' common/lib/modules/fglrx/build_mod/2.6.x/Makefile
+
 cp -P arch/$ARCH/lib/modules/fglrx/build_mod/libfglrx_ip.a \
   common/lib/modules/fglrx/build_mod/2.6.x
 
