pastebincl : add new script to send logs

--- a/packages/pastebincl/build
+++ b/packages/pastebincl/build
@@ -7,3 +7,5 @@ cd $PKG_BUILD_DIR/
 sed -i -e "s:prefix=/usr/:prefix=.install/usr/:" Makefile 
 make CXX="$TARGET_CXX"
 make_install
+
+cp $ROOT/$PACKAGES/$1/scripts/send-logs .install/usr/bin
