--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -798,9 +798,9 @@ CONFIG_OPT_xbmc_alsa=y
 CONFIG_PKG_xbmc-addon-bluecop=y
 CONFIG_PKG_xbmc-addon-navi-x=y
 CONFIG_PKG_xbmc-addon-vuplus=y
-# CONFIG_PKG_xbmc-addon-xvdr is not set
+CONFIG_PKG_xbmc-addon-xvdr=y
 # CONFIG_PKG_xbmc-eventclient is not set
-# CONFIG_PKG_xbmc-pvr-addons is not set
+CONFIG_PKG_xbmc-pvr-addons=y
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
 # CONFIG_PKG_xine-ui is not set
@@ -1020,7 +1020,7 @@ CONFIG_PKG_eglibc-network=y
 # CONFIG_PKG_gcc-final is not set
 CONFIG_PKG_i18n-keymaps=y
 CONFIG_PKG_i18n-locales=y
-# CONFIG_PKG_kbd is not set
+CONFIG_PKG_kbd=y
 CONFIG_PKG_kmod=y
 CONFIG_PKG_linux=y
 CONFIG_OPT_linux_alsa=y
