[cubox] add libshairport to defconfig

--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -380,7 +380,7 @@ CONFIG_PKG_SDL-mixer=y
 # CONFIG_PKG_WebKitSDL is not set
 # CONFIG_PKG_a52dec is not set
 CONFIG_PKG_acl=y
-# CONFIG_PKG_afpfs-ng is not set
+CONFIG_PKG_afpfs-ng=y
 # CONFIG_PKG_atk is not set
 CONFIG_PKG_attr=y
 CONFIG_PKG_avahi=y
@@ -526,7 +526,7 @@ CONFIG_PKG_libpng=y
 # CONFIG_PKG_librem is not set
 # CONFIG_PKG_librsvg is not set
 CONFIG_PKG_libsamplerate=y
-# CONFIG_PKG_libshairport is not set
+CONFIG_PKG_libshairport=y
 # CONFIG_PKG_libshout is not set
 CONFIG_PKG_libsigc=y
 CONFIG_PKG_libsmbclient=y
@@ -577,7 +577,7 @@ CONFIG_PKG_pcre=y
 # CONFIG_PKG_qt is not set
 # CONFIG_PKG_qt-mobility is not set
 # CONFIG_PKG_qt-qmf is not set
-# CONFIG_PKG_readline is not set
+CONFIG_PKG_readline=y
 # CONFIG_PKG_rest is not set
 CONFIG_PKG_rtorrent=y
 CONFIG_PKG_sg3-utils=y
@@ -787,8 +787,8 @@ CONFIG_OPT_xbmc_pvr=y
 CONFIG_OPT_xbmc_addons=y
 CONFIG_OPT_xbmc_libcec=y
 CONFIG_OPT_xbmc_libnfs=y
-# CONFIG_OPT_xbmc_afpclient is not set
-# CONFIG_OPT_xbmc_airtunes is not set
+CONFIG_OPT_xbmc_afpclient=y
+CONFIG_OPT_xbmc_airtunes=y
 # CONFIG_OPT_xbmc_screensavers is not set
 CONFIG_OPT_xbmc_dove=y
 # CONFIG_OPT_xbmc_gstreamer is not set
