cubox : remove libav from defconfig

--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -681,8 +681,7 @@ CONFIG_OPT_pvr_vdr=y
 # CONFIG_PKG_gst-plugins-ugly is not set
 # CONFIG_PKG_gst-vaapi is not set
 # CONFIG_PKG_gstreamer is not set
-CONFIG_PKG_libav=y
-# CONFIG_OPT_libav_vaapi is not set
+# CONFIG_PKG_libav is not set
 CONFIG_PKG_libbluray=y
 CONFIG_OPT_libbluray_aacs=y
 # CONFIG_PKG_libdca is not set
