--- a/config/defconfigs/geexbox-freevo-i386-generic.conf
+++ b/config/defconfigs/geexbox-freevo-i386-generic.conf
@@ -551,7 +551,7 @@ CONFIG_PKG_libpng=y
 CONFIG_PKG_libsamplerate=y
 # CONFIG_PKG_libshairport is not set
 # CONFIG_PKG_libshout is not set
-# CONFIG_PKG_libsigc is not set
+# CONFIG_PKG_libsigcpp is not set
 CONFIG_PKG_libsmbclient=y
 # CONFIG_PKG_libsndfile is not set
 # CONFIG_PKG_libsoup is not set
@@ -559,6 +559,7 @@ CONFIG_PKG_libssh=y
 # CONFIG_PKG_libsvg is not set
 # CONFIG_PKG_libtelepathy is not set
 CONFIG_PKG_libtheora=y
+CONFIG_PKG_libtool=y
 # CONFIG_PKG_libtorrent is not set
 CONFIG_PKG_libungif=y
 CONFIG_PKG_libusb=y
