--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -528,7 +528,7 @@ CONFIG_PKG_libpng=y
 CONFIG_PKG_libsamplerate=y
 CONFIG_PKG_libshairport=y
 # CONFIG_PKG_libshout is not set
-CONFIG_PKG_libsigc=y
+CONFIG_PKG_libsigcpp=y
 CONFIG_PKG_libsmbclient=y
 CONFIG_PKG_libsndfile=y
 # CONFIG_PKG_libsoup is not set
@@ -536,6 +536,7 @@ CONFIG_PKG_libssh=y
 # CONFIG_PKG_libsvg is not set
 # CONFIG_PKG_libtelepathy is not set
 CONFIG_PKG_libtheora=y
+CONFIG_PKG_libtool=y
 CONFIG_PKG_libtorrent=y
 CONFIG_PKG_libungif=y
 CONFIG_PKG_libusb=y
