--- a/config/defconfigs/base-armada5xx-cubox.conf
+++ b/config/defconfigs/base-armada5xx-cubox.conf
@@ -496,7 +496,7 @@ CONFIG_PKG_libogg=m
 # CONFIG_PKG_libsamplerate is not set
 # CONFIG_PKG_libshairport is not set
 # CONFIG_PKG_libshout is not set
-# CONFIG_PKG_libsigc is not set
+# CONFIG_PKG_libsigcpp is not set
 # CONFIG_PKG_libsmbclient is not set
 CONFIG_PKG_libsndfile=m
 # CONFIG_PKG_libsoup is not set
@@ -504,6 +504,7 @@ CONFIG_PKG_libsndfile=m
 # CONFIG_PKG_libsvg is not set
 # CONFIG_PKG_libtelepathy is not set
 # CONFIG_PKG_libtheora is not set
+# CONFIG_PKG_libtool is not set
 # CONFIG_PKG_libtorrent is not set
 # CONFIG_PKG_libungif is not set
 CONFIG_PKG_libusb=y
