--- a/config/defconfigs/base-omap4-pandaboard.conf
+++ b/config/defconfigs/base-omap4-pandaboard.conf
@@ -435,7 +435,7 @@ CONFIG_PKG_libffi=y
 # CONFIG_PKG_libsamplerate is not set
 # CONFIG_PKG_libshairport is not set
 # CONFIG_PKG_libshout is not set
-# CONFIG_PKG_libsigc is not set
+# CONFIG_PKG_libsigcpp is not set
 # CONFIG_PKG_libsmbclient is not set
 # CONFIG_PKG_libsndfile is not set
 # CONFIG_PKG_libsoup is not set
@@ -443,6 +443,7 @@ CONFIG_PKG_libffi=y
 # CONFIG_PKG_libsvg is not set
 # CONFIG_PKG_libtelepathy is not set
 # CONFIG_PKG_libtheora is not set
+# CONFIG_PKG_libtool is not set
 # CONFIG_PKG_libtorrent is not set
 # CONFIG_PKG_libungif is not set
 CONFIG_PKG_libusb=y
