--- a/config/defconfigs/base-x86_64-generic.conf
+++ b/config/defconfigs/base-x86_64-generic.conf
@@ -503,7 +503,7 @@ CONFIG_PKG_libnl=y
 # CONFIG_PKG_libsamplerate is not set
 # CONFIG_PKG_libshairport is not set
 # CONFIG_PKG_libshout is not set
-# CONFIG_PKG_libsigc is not set
+# CONFIG_PKG_libsigcpp is not set
 CONFIG_PKG_libsmbclient=y
 # CONFIG_PKG_libsndfile is not set
 # CONFIG_PKG_libsoup is not set
@@ -511,6 +511,7 @@ CONFIG_PKG_libsmbclient=y
 # CONFIG_PKG_libsvg is not set
 # CONFIG_PKG_libtelepathy is not set
 # CONFIG_PKG_libtheora is not set
+# CONFIG_PKG_libtool is not set
 # CONFIG_PKG_libtorrent is not set
 # CONFIG_PKG_libungif is not set
 CONFIG_PKG_libusb=y
