--- a/config/defconfigs/geexbox-xbmc-imx6-sabrelite.conf
+++ b/config/defconfigs/geexbox-xbmc-imx6-sabrelite.conf
@@ -532,7 +532,7 @@ CONFIG_PKG_libpng=y
 CONFIG_PKG_libsamplerate=y
 # CONFIG_PKG_libshairport is not set
 # CONFIG_PKG_libshout is not set
-CONFIG_PKG_libsigc=m
+CONFIG_PKG_libsigcpp=m
 CONFIG_PKG_libsmbclient=y
 # CONFIG_PKG_libsndfile is not set
 # CONFIG_PKG_libsoup is not set
@@ -540,6 +540,7 @@ CONFIG_PKG_libssh=y
 # CONFIG_PKG_libsvg is not set
 # CONFIG_PKG_libtelepathy is not set
 # CONFIG_PKG_libtheora is not set
+# CONFIG_PKG_libtool is not set
 # CONFIG_PKG_libtorrent is not set
 CONFIG_PKG_libungif=y
 CONFIG_PKG_libusb=y
