--- a/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
@@ -533,7 +533,7 @@ CONFIG_PKG_libpng=y
 CONFIG_PKG_libsamplerate=y
 CONFIG_PKG_libshairport=y
 # CONFIG_PKG_libshout is not set
-CONFIG_PKG_libsigc=m
+CONFIG_PKG_libsigcpp=m
 CONFIG_PKG_libsmbclient=y
 CONFIG_PKG_libsndfile=m
 # CONFIG_PKG_libsoup is not set
@@ -541,6 +541,7 @@ CONFIG_PKG_libssh=y
 # CONFIG_PKG_libsvg is not set
 # CONFIG_PKG_libtelepathy is not set
 # CONFIG_PKG_libtheora is not set
+# CONFIG_PKG_libtool is not set
 CONFIG_PKG_libtorrent=m
 CONFIG_PKG_libungif=y
 CONFIG_PKG_libusb=y
