--- a/config/defconfigs/geexbox-xbmc-bcm2708-raspberrypi.conf
+++ b/config/defconfigs/geexbox-xbmc-bcm2708-raspberrypi.conf
@@ -600,6 +600,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_baresip is not set
 # CONFIG_PKG_chrpath is not set
 # CONFIG_PKG_cpuburn is not set
+# CONFIG_PKG_cubox-led is not set
 # CONFIG_PKG_elfutils is not set
 # CONFIG_PKG_ethtool is not set
 # CONFIG_PKG_evemu is not set
