--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -624,6 +624,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_baresip is not set
 # CONFIG_PKG_chrpath is not set
 # CONFIG_PKG_cpuburn is not set
+CONFIG_PKG_cubox-led=y
 # CONFIG_PKG_elfutils is not set
 # CONFIG_PKG_ethtool is not set
 # CONFIG_PKG_evemu is not set
