linux-perftools: update make defines
tested with 3.6.9

--- a/packages/linux-perftools/build
+++ b/packages/linux-perftools/build
@@ -10,14 +10,12 @@ make \
   ARCH=$TARGET_ARCH \
   EXTRA_CFLAGS="$CFLAGS" \
   CROSS_COMPILE=$TARGET_PREFIX \
-  NO_PERL=1 \
-  clean
-
-make \
-  ARCH=$TARGET_ARCH \
-  EXTRA_CFLAGS="$CFLAGS" \
-  CROSS_COMPILE=$TARGET_PREFIX \
-  NO_PERL=1
+  NO_LIBPERL=1 \
+  NO_LIBPYTHON=1 \
+  WERROR=0 \
+  NO_NEWT=1 \
+  NO_GTK2=1 \
+  V=1 clean all
 
 $STRIP perf
 
