--- a/config/defconfigs/geexbox-xbmc-i386-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-i386-generic.conf
@@ -1219,6 +1219,7 @@ CONFIG_PKG_xf86-video-sis=y
 CONFIG_PKG_xf86-video-vesa=y
 CONFIG_PKG_xf86-video-virtualbox=y
 CONFIG_PKG_xf86-video-vmware=y
+# CONFIG_PKG_xinput is not set
 # CONFIG_PKG_xinput-calibrator is not set
 CONFIG_PKG_xkbcomp=y
 CONFIG_PKG_xkeyboard-config=y
