--- a/config/defconfigs/geexbox-xbmc-imx5x-efikamx.conf
+++ b/config/defconfigs/geexbox-xbmc-imx5x-efikamx.conf
@@ -1167,6 +1167,7 @@ CONFIG_PKG_xf86-video-omapfb=y
 # CONFIG_PKG_xf86-video-r128 is not set
 # CONFIG_PKG_xf86-video-tegra is not set
 CONFIG_PKG_xf86-video-v4l2=y
+# CONFIG_PKG_xinput is not set
 # CONFIG_PKG_xinput-calibrator is not set
 CONFIG_PKG_xkbcomp=y
 CONFIG_PKG_xkeyboard-config=y
