--- a/config/defconfigs/geexbox-xbmc-tegra2-harmony.conf
+++ b/config/defconfigs/geexbox-xbmc-tegra2-harmony.conf
@@ -1165,6 +1165,7 @@ CONFIG_PKG_xf86-video-fbdev=y
 # CONFIG_PKG_xf86-video-r128 is not set
 CONFIG_PKG_xf86-video-tegra=y
 # CONFIG_PKG_xf86-video-v4l2 is not set
+# CONFIG_PKG_xinput is not set
 # CONFIG_PKG_xinput-calibrator is not set
 CONFIG_PKG_xkbcomp=y
 CONFIG_PKG_xkeyboard-config=y
