--- a/config/defconfigs/base-imx6-sabrelite.conf
+++ b/config/defconfigs/base-imx6-sabrelite.conf
@@ -1095,6 +1095,7 @@ CONFIG_PKG_usbutils=y
 # CONFIG_PKG_xf86-video-r128 is not set
 # CONFIG_PKG_xf86-video-tegra is not set
 # CONFIG_PKG_xf86-video-v4l2 is not set
+# CONFIG_PKG_xinput is not set
 # CONFIG_PKG_xinput-calibrator is not set
 # CONFIG_PKG_xkbcomp is not set
 # CONFIG_PKG_xkeyboard-config is not set
