--- a/config/defconfigs/base-x86_64-generic.conf
+++ b/config/defconfigs/base-x86_64-generic.conf
@@ -1109,6 +1109,7 @@ CONFIG_OPT_usbutils_devtools=y
 # CONFIG_PKG_xf86-video-vesa is not set
 # CONFIG_PKG_xf86-video-virtualbox is not set
 # CONFIG_PKG_xf86-video-vmware is not set
+# CONFIG_PKG_xinput is not set
 # CONFIG_PKG_xinput-calibrator is not set
 # CONFIG_PKG_xkbcomp is not set
 # CONFIG_PKG_xkeyboard-config is not set
