--- a/config/defconfigs/geexbox-freevo-i386-generic.conf
+++ b/config/defconfigs/geexbox-freevo-i386-generic.conf
@@ -1197,6 +1197,7 @@ CONFIG_PKG_xf86-video-openchrome=y
 CONFIG_PKG_xf86-video-vesa=y
 # CONFIG_PKG_xf86-video-virtualbox is not set
 CONFIG_PKG_xf86-video-vmware=y
+# CONFIG_PKG_xinput is not set
 # CONFIG_PKG_xinput-calibrator is not set
 CONFIG_PKG_xkbcomp=y
 CONFIG_PKG_xkeyboard-config=y
