--- a/config/defconfigs/geexbox-xbmc-bcm2708-raspberrypi.conf
+++ b/config/defconfigs/geexbox-xbmc-bcm2708-raspberrypi.conf
@@ -1143,6 +1143,7 @@ CONFIG_PKG_xbmc-addon-geexbox-updater=y
 # CONFIG_PKG_xf86-video-r128 is not set
 # CONFIG_PKG_xf86-video-tegra is not set
 # CONFIG_PKG_xf86-video-v4l2 is not set
+# CONFIG_PKG_xinput is not set
 # CONFIG_PKG_xinput-calibrator is not set
 # CONFIG_PKG_xkbcomp is not set
 # CONFIG_PKG_xkeyboard-config is not set
