--- a/packages/xmlrpc-c/build
+++ b/packages/xmlrpc-c/build
@@ -2,15 +2,25 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
 
-mv $ROOT/$TOOLCHAIN/bin/xml2-config $ROOT/$TOOLCHAIN/bin/temp-xml2-config
-ln -s $LIB_PREFIX/bin/xml2-config $ROOT/$TOOLCHAIN/bin/xml2-config
+cd $PKG_BUILD_DIR
+
+if ! [ -f $ROOT/$TOOLCHAIN/bin/xml2-config-target ] ; then 
+  cp $LIB_PREFIX/bin/xml2-config $ROOT/$TOOLCHAIN/bin/xml2-config-target
+fi
+
+sed -i "s:xml2-config:xml2-config-target:g" src/Makefile
+sed -i "s:xml2-config:xml2-config-target:g" src/cpp/Makefile
+sed -i "s:xml2-config:xml2-config-target:g" src/cpp/test/Makefile
+
+mylibs="`$LIB_PREFIX/bin/xml2-config --libs`"
+mycflags="`$LIB_PREFIX/bin/xml2-config --cflags`"
 
 do_configure --enable-libxml2-backend
 
-make || mv $ROOT/$TOOLCHAIN/bin/temp-xml2-config $ROOT/$TOOLCHAIN/bin/xml2-config
-mv $ROOT/$TOOLCHAIN/bin/temp-xml2-config $ROOT/$TOOLCHAIN/bin/xml2-config
+make XML_PARSER_LIBDEP=$mylibs LIBXML_INCLUDES=$mycflags LIB_XML=$mylibs LDLIBS_XML=$mylibs LIBXML=$mylibs
+
 make_install
 
 sed -i "s:/usr/include:$LIB_PREFIX/include:g" .install/usr/bin/xmlrpc-c-config
