[cubo] linux : enable more devices, enable bluetooth

--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -1025,7 +1025,7 @@ CONFIG_PKG_kbd=y
 CONFIG_PKG_kmod=y
 CONFIG_PKG_linux=y
 CONFIG_OPT_linux_alsa=y
-# CONFIG_OPT_linux_bluetooth is not set
+CONFIG_OPT_linux_bluetooth=y
 # CONFIG_OPT_linux_dab is not set
 CONFIG_OPT_linux_dvb=y
 CONFIG_OPT_linux_ethernet=y
