[eglibc] : apply floating point options for ARM

--- a/packages/eglibc/build
+++ b/packages/eglibc/build
@@ -14,6 +14,9 @@ elif [ "$TARGET_ARCH" = i386 ]; then
 elif [ "$TARGET_ARCH" = arm ]; then
   CFLAGS="-mcpu=$TARGET_CPU -mtune=$TARGET_CPU"
   [ "$FPU_OPTIMIZATIONS" = "neon" ] && CFLAGS="$CFLAGS -mfpu=neon $ARM_FLOAT_ABI"
+  [ "$FPU_OPTIMIZATIONS" = "vfp2" ] && CFLAGS="$CFLAGS -mfpu=vfp $ARM_FLOAT_ABI"
+  [ "$FPU_OPTIMIZATIONS" = "vfp3" ] && CFLAGS="$CFLAGS -mfpu=vfpv3 $ARM_FLOAT_ABI"
+  [ "$FPU_OPTIMIZATIONS" = "vfp3-d16" ] && CFLAGS="$CFLAGS -mfpu=vfpv3-d16 $ARM_FLOAT_ABI"
 elif [ "$TARGET_ARCH" = mips ]; then
   CFLAGS="-mtune=$TARGET_CPU"
 else
