eglibc : build with RCMD = y

--- a/packages/eglibc/build
+++ b/packages/eglibc/build
@@ -72,7 +72,8 @@ cat >option-groups.config <<EOF
 
   OPTION_EGLIBC_NIS = n
   OPTION_EGLIBC_NSSWITCH = y
-  OPTION_EGLIBC_RCMD = n
+# needed by cups
+  OPTION_EGLIBC_RCMD = y
 
 # Needed by util-linux-ng
   OPTION_EGLIBC_GETLOGIN = y
