--- a/config/defconfigs/geexbox-freevo-i386-generic.conf
+++ b/config/defconfigs/geexbox-freevo-i386-generic.conf
@@ -1003,6 +1003,7 @@ CONFIG_PKG_busybox=y
 # CONFIG_PKG_codesourcery-libc-network is not set
 # CONFIG_PKG_codesourcery-toolchain is not set
 # CONFIG_PKG_cpulimit is not set
+# CONFIG_PKG_cups is not set
 CONFIG_PKG_dbus=y
 CONFIG_OPT_dbus_xorg=y
 CONFIG_PKG_eglibc=y
@@ -1083,6 +1084,7 @@ CONFIG_OPT_dialog_xdialog=y
 # CONFIG_PKG_extra-fonts-nonfree is not set
 # CONFIG_PKG_gdb is not set
 # CONFIG_PKG_generator is not set
+# CONFIG_PKG_ghostscript is not set
 # CONFIG_PKG_graphlcd-base is not set
 # CONFIG_PKG_gtk-demo is not set
 # CONFIG_PKG_i2c-tools is not set
@@ -1095,6 +1097,7 @@ CONFIG_OPT_dialog_xdialog=y
 # CONFIG_PKG_nano is not set
 # CONFIG_PKG_oprofile is not set
 CONFIG_PKG_rtmpdump=y
+# CONFIG_PKG_ruby is not set
 # CONFIG_PKG_screen is not set
 # CONFIG_PKG_strace is not set
 # CONFIG_PKG_tools-generator is not set
