--- a/config/defconfigs/geexbox-xbmc-tegra2-harmony.conf
+++ b/config/defconfigs/geexbox-xbmc-tegra2-harmony.conf
@@ -999,6 +999,7 @@ CONFIG_PKG_busybox=y
 # CONFIG_PKG_codesourcery-libc-network is not set
 # CONFIG_PKG_codesourcery-toolchain is not set
 # CONFIG_PKG_cpulimit is not set
+# CONFIG_PKG_cups is not set
 CONFIG_PKG_dbus=y
 CONFIG_OPT_dbus_xorg=y
 CONFIG_PKG_eglibc=y
@@ -1066,6 +1067,7 @@ CONFIG_PKG_util-linux-ng=y
 # CONFIG_PKG_extra-fonts-nonfree is not set
 # CONFIG_PKG_gdb is not set
 # CONFIG_PKG_generator is not set
+# CONFIG_PKG_ghostscript is not set
 # CONFIG_PKG_graphlcd-base is not set
 # CONFIG_PKG_gtk-demo is not set
 # CONFIG_PKG_i2c-tools is not set
@@ -1079,6 +1081,7 @@ CONFIG_PKG_mc=m
 # CONFIG_PKG_omapdrmtest is not set
 # CONFIG_PKG_oprofile is not set
 CONFIG_PKG_rtmpdump=y
+# CONFIG_PKG_ruby is not set
 CONFIG_PKG_screen=m
 # CONFIG_PKG_snowball-mactool is not set
 # CONFIG_PKG_strace is not set
