--- a/config/defconfigs/base-imx6-sabrelite.conf
+++ b/config/defconfigs/base-imx6-sabrelite.conf
@@ -930,6 +930,7 @@ CONFIG_PKG_busybox=y
 # CONFIG_PKG_codesourcery-libc-network is not set
 # CONFIG_PKG_codesourcery-toolchain is not set
 # CONFIG_PKG_cpulimit is not set
+# CONFIG_PKG_cups is not set
 CONFIG_PKG_dbus=y
 # CONFIG_OPT_dbus_xorg is not set
 CONFIG_PKG_eglibc=y
@@ -998,6 +999,7 @@ CONFIG_PKG_dialog=y
 # CONFIG_PKG_extra-fonts-nonfree is not set
 # CONFIG_PKG_gdb is not set
 # CONFIG_PKG_generator is not set
+# CONFIG_PKG_ghostscript is not set
 # CONFIG_PKG_graphlcd-base is not set
 # CONFIG_PKG_gtk-demo is not set
 # CONFIG_PKG_i2c-tools is not set
@@ -1011,6 +1013,7 @@ CONFIG_PKG_nano=y
 # CONFIG_PKG_omapdrmtest is not set
 # CONFIG_PKG_oprofile is not set
 # CONFIG_PKG_rtmpdump is not set
+# CONFIG_PKG_ruby is not set
 # CONFIG_PKG_screen is not set
 # CONFIG_PKG_snowball-mactool is not set
 # CONFIG_PKG_strace is not set
