--- a/config/defconfigs/base-x86_64-generic.conf
+++ b/config/defconfigs/base-x86_64-generic.conf
@@ -923,6 +923,7 @@ CONFIG_PKG_busybox=y
 # CONFIG_PKG_codesourcery-libc-network is not set
 # CONFIG_PKG_codesourcery-toolchain is not set
 # CONFIG_PKG_cpulimit is not set
+# CONFIG_PKG_cups is not set
 CONFIG_PKG_dbus=y
 # CONFIG_OPT_dbus_xorg is not set
 CONFIG_PKG_eglibc=y
@@ -1001,6 +1002,7 @@ CONFIG_PKG_dialog=y
 # CONFIG_PKG_extra-fonts-nonfree is not set
 # CONFIG_PKG_gdb is not set
 # CONFIG_PKG_generator is not set
+# CONFIG_PKG_ghostscript is not set
 # CONFIG_PKG_graphlcd-base is not set
 # CONFIG_PKG_gtk-demo is not set
 # CONFIG_PKG_i2c-tools is not set
@@ -1013,6 +1015,7 @@ CONFIG_PKG_dialog=y
 # CONFIG_PKG_nano is not set
 # CONFIG_PKG_oprofile is not set
 # CONFIG_PKG_rtmpdump is not set
+# CONFIG_PKG_ruby is not set
 # CONFIG_PKG_screen is not set
 CONFIG_PKG_strace=y
 # CONFIG_PKG_tools-generator is not set
