--- a/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
@@ -1006,6 +1006,7 @@ CONFIG_PKG_busybox=y
 # CONFIG_PKG_codesourcery-libc-network is not set
 # CONFIG_PKG_codesourcery-toolchain is not set
 CONFIG_PKG_cpulimit=m
+# CONFIG_PKG_cups is not set
 CONFIG_PKG_dbus=y
 CONFIG_OPT_dbus_xorg=y
 CONFIG_PKG_eglibc=y
@@ -1084,6 +1085,7 @@ CONFIG_PKG_dvb-apps=y
 CONFIG_PKG_extra-fonts-nonfree=y
 # CONFIG_PKG_gdb is not set
 # CONFIG_PKG_generator is not set
+# CONFIG_PKG_ghostscript is not set
 # CONFIG_PKG_graphlcd-base is not set
 # CONFIG_PKG_gtk-demo is not set
 # CONFIG_PKG_i2c-tools is not set
@@ -1096,6 +1098,7 @@ CONFIG_PKG_mc=m
 CONFIG_PKG_nano=y
 # CONFIG_PKG_oprofile is not set
 CONFIG_PKG_rtmpdump=y
+# CONFIG_PKG_ruby is not set
 CONFIG_PKG_screen=m
 # CONFIG_PKG_strace is not set
 # CONFIG_PKG_tools-generator is not set
