u-boot: fix crosscompile This fixes ux500 build also.

--- a/packages/u-boot/build
+++ b/packages/u-boot/build
@@ -12,6 +12,10 @@ fi
 
 cd $BUILD/$1*
 
+# strip in our toolchain is a symbolic link to the target strip.
+# Move the toolchain/bin in the back of the PATH so we can still find mkimage
+export PATH=$(echo $PATH | sed "s|$ROOT/$TOOLCHAIN/bin:||g" ):$ROOT/$TOOLCHAIN/bin
+
 make CROSS_COMPILE="$TARGET_PREFIX" $MACHINE_UBOOT_CONFIG
 make CROSS_COMPILE="$TARGET_PREFIX" HOSTCC="$HOST_CC" HOSTSTRIP="true"
 
