cups : force libdir to /usr/lib, cosmetics

--- a/packages/cups/build
+++ b/packages/cups/build
@@ -6,7 +6,6 @@ get_meta $1
 
 cd $PKG_BUILD_DIR
 
-export MAKEFLAGS=-j1
 export DSOFLAGS="$LDFLAGS"
 
 do_configure  --enable-gnutls \
@@ -20,26 +19,22 @@ do_configure  --enable-gnutls \
                --without-java \
                --with-pdftops=none \
                --disable-gssapi \
+               --libdir=/usr/lib \
                LIBTOOL=""
                
                
 
 sed -i s:STRIP:NOSTRIP: Makedefs
-	sed -i s:serial:: backend/Makefile
+sed -i s:serial:: backend/Makefile
+echo "all:"    >  man/Makefile
+echo "libs:" >> man/Makefile
+echo "install:" >> man/Makefile
+echo "install-data:" >> man/Makefile
+echo "install-exec:" >> man/Makefile
+echo "install-headers:" >> man/Makefile
+echo "install-libs:" >> man/Makefile
 
-	echo "all:"    >  man/Makefile
-	echo "libs:" >> man/Makefile
-	echo "install:" >> man/Makefile
-	echo "install-data:" >> man/Makefile
-	echo "install-exec:" >> man/Makefile
-	echo "install-headers:" >> man/Makefile
-	echo "install-libs:" >> man/Makefile
 
 make
 make_install
-
-if [ -d .install/usr/lib64 ] ; then
-  echo "moving lib64 to lib"
-  mv  .install/usr/lib64 .install/usr/lib
-fi
 
