ghostscript : build with fonctonfig, specify libdir

--- a/packages/ghostscript/build
+++ b/packages/ghostscript/build
@@ -22,12 +22,11 @@ do_configure --without-jbig2dec \
              --with-system-libtiff \
              --without-jasper \
              --with-install-cups \
-             --without-libidn
+             --without-libidn \
+             --enable-freetype \
+             --enable-fontconfig \
+             --libdir=/usr/lib
 
 
 make
 make_install
-
-if [ -d .install/usr/lib64 ] ; then 
-  mv .install/usr/lib64 .install/usr/lib
-fi
