cups : update build & install scripts

--- a/packages/cups/build
+++ b/packages/cups/build
@@ -37,3 +37,7 @@ echo "install-libs:" >> man/Makefile
 
 make
 make_install
+
+#clash with cups-filters
+rm -R .install/usr/share/cups/banners
+rm .install/usr/share/cups/data/testprint
