--- a/config/defconfigs/base-imx6-sabrelite.conf
+++ b/config/defconfigs/base-imx6-sabrelite.conf
@@ -418,6 +418,7 @@ CONFIG_PKG_gnutls=y
 # CONFIG_PKG_htop is not set
 # CONFIG_PKG_i18n is not set
 # CONFIG_PKG_icu4c is not set
+# CONFIG_PKG_ijs is not set
 # CONFIG_PKG_imlib2 is not set
 # CONFIG_PKG_imx5-graphics is not set
 # CONFIG_PKG_imx5-lib is not set
@@ -528,6 +529,7 @@ CONFIG_PKG_ncurses=y
 # CONFIG_PKG_ncursesw is not set
 # CONFIG_PKG_neon is not set
 CONFIG_PKG_nettle=y
+# CONFIG_PKG_nss-mdns is not set
 CONFIG_PKG_openssl=y
 # CONFIG_PKG_orc is not set
 # CONFIG_PKG_ortp is not set
@@ -536,6 +538,8 @@ CONFIG_PKG_pciids=y
 # CONFIG_PKG_pcre is not set
 # CONFIG_PKG_pjsip is not set
 # CONFIG_PKG_pkcs11-helper is not set
+# CONFIG_PKG_poppler is not set
+# CONFIG_PKG_qpdf is not set
 # CONFIG_PKG_qt is not set
 # CONFIG_PKG_qt-mobility is not set
 # CONFIG_PKG_qt-qmf is not set
@@ -584,12 +588,18 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_chrpath is not set
 # CONFIG_PKG_cpuburn is not set
 # CONFIG_PKG_cubox-led is not set
+# CONFIG_PKG_cups-filters is not set
 # CONFIG_PKG_elfutils is not set
+# CONFIG_PKG_epson-inkjet-printer-escpr is not set
 # CONFIG_PKG_ethtool is not set
 # CONFIG_PKG_evemu is not set
+# CONFIG_PKG_foomatic-db is not set
+# CONFIG_PKG_foomatic-db-engine is not set
+# CONFIG_PKG_foomatic-filters is not set
 # CONFIG_PKG_glmark2 is not set
 # CONFIG_PKG_hdmiservice is not set
 # CONFIG_PKG_hiawatha is not set
+# CONFIG_PKG_hid-replay is not set
 # CONFIG_PKG_iioutils is not set
 # CONFIG_PKG_libcheck is not set
 # CONFIG_PKG_libglu is not set
