--- a/config/defconfigs/base-omap4-pandaboard.conf
+++ b/config/defconfigs/base-omap4-pandaboard.conf
@@ -359,6 +359,7 @@ CONFIG_PKG_gnutls=y
 # CONFIG_PKG_htop is not set
 # CONFIG_PKG_i18n is not set
 # CONFIG_PKG_icu4c is not set
+# CONFIG_PKG_ijs is not set
 # CONFIG_PKG_imlib2 is not set
 # CONFIG_PKG_imx5-lib is not set
 # CONFIG_PKG_imx6-lib is not set
@@ -465,6 +466,7 @@ CONFIG_PKG_libusb-compat=y
 # CONFIG_PKG_ncursesw is not set
 # CONFIG_PKG_neon is not set
 CONFIG_PKG_nettle=y
+# CONFIG_PKG_nss-mdns is not set
 # CONFIG_PKG_openssl is not set
 # CONFIG_PKG_orc is not set
 # CONFIG_PKG_ortp is not set
@@ -473,6 +475,8 @@ CONFIG_PKG_pciids=y
 # CONFIG_PKG_pcre is not set
 # CONFIG_PKG_pjsip is not set
 # CONFIG_PKG_pkcs11-helper is not set
+# CONFIG_PKG_poppler is not set
+# CONFIG_PKG_qpdf is not set
 # CONFIG_PKG_qt is not set
 # CONFIG_PKG_qt-mobility is not set
 # CONFIG_PKG_qt-qmf is not set
@@ -518,12 +522,18 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_chrpath is not set
 # CONFIG_PKG_cpuburn is not set
 # CONFIG_PKG_cubox-led is not set
+# CONFIG_PKG_cups-filters is not set
 # CONFIG_PKG_elfutils is not set
+# CONFIG_PKG_epson-inkjet-printer-escpr is not set
 # CONFIG_PKG_ethtool is not set
 # CONFIG_PKG_evemu is not set
+# CONFIG_PKG_foomatic-db is not set
+# CONFIG_PKG_foomatic-db-engine is not set
+# CONFIG_PKG_foomatic-filters is not set
 # CONFIG_PKG_glmark2 is not set
 # CONFIG_PKG_hdmiservice is not set
 # CONFIG_PKG_hiawatha is not set
+# CONFIG_PKG_hid-replay is not set
 # CONFIG_PKG_iioutils is not set
 # CONFIG_PKG_libcheck is not set
 # CONFIG_PKG_libglu is not set
