--- a/config/defconfigs/geexbox-xbmc-tegra2-ac100.conf
+++ b/config/defconfigs/geexbox-xbmc-tegra2-ac100.conf
@@ -448,6 +448,7 @@ CONFIG_PKG_gnutls=y
 CONFIG_PKG_i18n=y
 # CONFIG_OPT_i18n_fonts is not set
 # CONFIG_PKG_icu4c is not set
+# CONFIG_PKG_ijs is not set
 # CONFIG_PKG_imlib2 is not set
 # CONFIG_PKG_imx5-graphics is not set
 # CONFIG_PKG_imx5-lib is not set
@@ -567,6 +568,7 @@ CONFIG_OPT_ncurses_terminfo=y
 # CONFIG_PKG_ncursesw is not set
 CONFIG_PKG_neon=m
 CONFIG_PKG_nettle=y
+# CONFIG_PKG_nss-mdns is not set
 CONFIG_PKG_openssl=y
 # CONFIG_PKG_orc is not set
 # CONFIG_PKG_ortp is not set
@@ -575,6 +577,8 @@ CONFIG_PKG_pciids=y
 CONFIG_PKG_pcre=y
 # CONFIG_PKG_pjsip is not set
 # CONFIG_PKG_pkcs11-helper is not set
+# CONFIG_PKG_poppler is not set
+# CONFIG_PKG_qpdf is not set
 # CONFIG_PKG_qt is not set
 # CONFIG_PKG_qt-mobility is not set
 # CONFIG_PKG_qt-qmf is not set
@@ -624,12 +628,18 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_chrpath is not set
 # CONFIG_PKG_cpuburn is not set
 # CONFIG_PKG_cubox-led is not set
+# CONFIG_PKG_cups-filters is not set
 # CONFIG_PKG_elfutils is not set
+# CONFIG_PKG_epson-inkjet-printer-escpr is not set
 # CONFIG_PKG_ethtool is not set
 # CONFIG_PKG_evemu is not set
+# CONFIG_PKG_foomatic-db is not set
+# CONFIG_PKG_foomatic-db-engine is not set
+# CONFIG_PKG_foomatic-filters is not set
 # CONFIG_PKG_glmark2 is not set
 # CONFIG_PKG_hdmiservice is not set
 # CONFIG_PKG_hiawatha is not set
+# CONFIG_PKG_hid-replay is not set
 # CONFIG_PKG_iioutils is not set
 # CONFIG_PKG_libcheck is not set
 CONFIG_PKG_libglu=y
