ghostscript-host : bump version to 9.06~dfsg

--- a/packages/ghostscript-host/build
+++ b/packages/ghostscript-host/build
@@ -9,9 +9,9 @@ cd $PKG_BUILD_DIR
 export HOST_CFLAGS="$HOST_CFLAGS -DHAVE_SYS_TIME_H=1"
 setup_toolchain host
 
-./configure  --without-jbig2dec --without-x --with-system-libtiff --without-jasper \
-             --without-libidn
-make
+do_configure host --without-jbig2dec --without-x --with-system-libtiff --without-jasper --disable-fontconfig --without-libidn --disable-freetype
+
+make XTRALIBS="-lz"
 
 mkdir -p .install/bin
 cp obj/aux/* .install/bin
