--- a/packages/ghostscript/build
+++ b/packages/ghostscript/build
@@ -8,7 +8,7 @@ get_meta $1
 cd $PKG_BUILD_DIR
 
 mkdir -p obj/aux
-for i in genarch genconf echogs gendev genht mkromfs; do
+for i in genarch genconf echogs genht mkromfs; do
   ln -sf $ROOT/$TOOLCHAIN/bin/$i obj/aux/$i
 done
 
