update defconfig for cubox

--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -447,7 +447,7 @@ CONFIG_PKG_gnutls=y
 CONFIG_PKG_i18n=y
 # CONFIG_OPT_i18n_fonts is not set
 # CONFIG_PKG_icu4c is not set
-# CONFIG_PKG_ijs is not set
+CONFIG_PKG_ijs=m
 # CONFIG_PKG_imlib2 is not set
 # CONFIG_PKG_imx5-graphics is not set
 # CONFIG_PKG_imx5-lib is not set
@@ -459,7 +459,8 @@ CONFIG_PKG_json=y
 # CONFIG_PKG_kissfft is not set
 # CONFIG_PKG_lame is not set
 # CONFIG_PKG_lcms is not set
-# CONFIG_PKG_lcms2 is not set
+CONFIG_PKG_lcms2=m
+CONFIG_OPT_lcms2_devtools=y
 # CONFIG_PKG_libSockets is not set
 CONFIG_PKG_libaacs=y
 CONFIG_PKG_libass=y
@@ -577,8 +578,8 @@ CONFIG_PKG_pciids=y
 CONFIG_PKG_pcre=y
 # CONFIG_PKG_pjsip is not set
 # CONFIG_PKG_pkcs11-helper is not set
-# CONFIG_PKG_poppler is not set
-# CONFIG_PKG_qpdf is not set
+CONFIG_PKG_poppler=m
+CONFIG_PKG_qpdf=m
 # CONFIG_PKG_qt is not set
 # CONFIG_PKG_qt-mobility is not set
 # CONFIG_PKG_qt-qmf is not set
@@ -629,14 +630,14 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_chrpath is not set
 # CONFIG_PKG_cpuburn is not set
 CONFIG_PKG_cubox-led=y
-# CONFIG_PKG_cups-filters is not set
+CONFIG_PKG_cups-filters=m
 # CONFIG_PKG_elfutils is not set
-# CONFIG_PKG_epson-inkjet-printer-escpr is not set
+CONFIG_PKG_epson-inkjet-printer-escpr=m
 # CONFIG_PKG_ethtool is not set
 # CONFIG_PKG_evemu is not set
-# CONFIG_PKG_foomatic-db is not set
-# CONFIG_PKG_foomatic-db-engine is not set
-# CONFIG_PKG_foomatic-filters is not set
+CONFIG_PKG_foomatic-db=m
+CONFIG_PKG_foomatic-db-engine=m
+CONFIG_PKG_foomatic-filters=m
 # CONFIG_PKG_glmark2 is not set
 # CONFIG_PKG_hdmiservice is not set
 # CONFIG_PKG_hiawatha is not set
@@ -1017,7 +1018,7 @@ CONFIG_PKG_busybox=y
 # CONFIG_PKG_codesourcery-libc-network is not set
 # CONFIG_PKG_codesourcery-toolchain is not set
 # CONFIG_PKG_cpulimit is not set
-# CONFIG_PKG_cups is not set
+CONFIG_PKG_cups=m
 CONFIG_PKG_dbus=y
 CONFIG_OPT_dbus_xorg=y
 CONFIG_PKG_eglibc=y
@@ -1086,7 +1087,7 @@ CONFIG_PKG_dialog=y
 CONFIG_PKG_extra-fonts-nonfree=y
 # CONFIG_PKG_gdb is not set
 # CONFIG_PKG_generator is not set
-# CONFIG_PKG_ghostscript is not set
+CONFIG_PKG_ghostscript=m
 # CONFIG_PKG_graphlcd-base is not set
 # CONFIG_PKG_gtk-demo is not set
 # CONFIG_PKG_i2c-tools is not set
