openssl: fix package build

--- a/packages/openssl/build
+++ b/packages/openssl/build
@@ -30,6 +30,11 @@ FEATURES="zlib-dynamic threads shared no-idea no-mdc2 no-rc5 no-krb5 -DHAVE_CRYP
 cd $BUILD/$1*
 
 ./Configure $FEATURES --prefix=/usr --openssldir=/etc/ssl $TARGET
+sed -i Makefile \
+  -e "s:CFLAG= \(.*\):CFLAG=\1 ${CFLAGS}:" \
+  -e "s:SHARED_LDFLAGS= \(.*\):SHARED_LDFLAGS=\1 ${LDFLAGS}:" \
+
+make CC=$CC LD=$LD RANLIB=$RANLIB depend
 make CC=$CC LD=$LD RANLIB=$RANLIB all build-shared
 make CC=$CC LD=$LD RANLIB=$RANLIB do_linux-shared
 
