--- a/packages/firmware-arm-raspberrypi/build
+++ b/packages/firmware-arm-raspberrypi/build
@@ -4,20 +4,7 @@
 
 cd $BUILD/$1*
 
-[ "$ARM_HARDFLOAT_ABI" = yes ] && VC=hardfp/opt/vc || VC=opt/vc
-
 mkdir -p .install/boot
-# use 128/128 ARM/GPU split firmware
-cp -P boot/arm128_start.elf .install/boot/start.elf
-cp -P boot/bootcode.bin boot/loader.bin .install/boot
-
-install_dir="$PWD/.install"
-debug_dir="$PWD/.install-debuginfo/usr/lib/debug"
-
-# TODO: conditionally install only the enabled libraries
-mkdir -p "$install_dir/usr" $debug_dir
-cp -PR $VC/bin $VC/include $VC/lib $VC/sbin .install/usr
-strip_libs $install_dir $debug_dir
-strip_bins $install_dir/usr/bin $debug_dir
-strip_bins $install_dir/usr/sbin $debug_dir
-
+cp -P boot/*.elf boot/*.dat boot/bootcode.bin .install/boot/
+echo "$DISTRONAME $TARGET_ARCH $DISTRO_VERSION (C) 2002-2012" \
+  > .install/boot/issue.txt
