raspberrypi-userland: install demos as well if devtools is enabled

--- a/packages/raspberrypi-userland/build
+++ b/packages/raspberrypi-userland/build
@@ -16,14 +16,19 @@ cmake  \
 
 make
 make_install
-cp -PR .install/opt/vc .install/usr
+install_dir="$PWD/.install"
+debug_dir="$PWD/.install-debuginfo"
+cp -PR $install_dir/opt/vc $install_dir/usr
 
 if pkg_uses $1 devtools; then
-  export SDKSTAGE="$PWD/.install/"
+  export SDKSTAGE="$install_dir"
   export CFLAGS="$CFLAGS -I${SDKSTAGE}/opt/vc/include/interface/vmcs_host/linux -I$LIB_PREFIX/include/freetype2"
   export LDFLAGS="$LDFLAGS -L${LIB_PREFIX}/lib -lfreetype -lz -lbz2"
   cd $SDKSTAGE/opt/vc/src/hello_pi
   sh -e rebuild.sh
+  mkdir -p $install_dir/usr/bin $debug_dir/usr/bin
+  cp -PR hello_*/hello_*.bin $install_dir/usr/bin
+  strip_bins $SDKSTAGE/usr/bin $debug_dir/usr/bin
 fi
 
 exit 0
