--- a/config/defconfigs/geexbox-xbmc-tegra2-harmony.conf
+++ b/config/defconfigs/geexbox-xbmc-tegra2-harmony.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20121125-r15571"
+CONFIG_KERNELVERSION="devel-20121230-r15669"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -580,6 +580,7 @@ CONFIG_PKG_pcre=y
 # CONFIG_PKG_qt is not set
 # CONFIG_PKG_qt-mobility is not set
 # CONFIG_PKG_qt-qmf is not set
+# CONFIG_PKG_raspberrypi-userland is not set
 # CONFIG_PKG_readline is not set
 # CONFIG_PKG_rest is not set
 CONFIG_PKG_rtorrent=m
