--- a/config/defconfigs/geexbox-xbmc-bcm2708-raspberrypi.conf
+++ b/config/defconfigs/geexbox-xbmc-bcm2708-raspberrypi.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20121125-r15571"
+CONFIG_KERNELVERSION="devel-20121230-r15669"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -559,6 +559,8 @@ CONFIG_PKG_pcre=y
 # CONFIG_PKG_qt is not set
 # CONFIG_PKG_qt-mobility is not set
 # CONFIG_PKG_qt-qmf is not set
+CONFIG_PKG_raspberrypi-userland=y
+CONFIG_OPT_raspberrypiuserland_devtools=y
 CONFIG_PKG_readline=y
 # CONFIG_PKG_rest is not set
 # CONFIG_PKG_rtorrent is not set
