--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -289,6 +289,7 @@ CONFIG_PKG_firmware-dvb-dib0700=y
 CONFIG_PKG_firmware-dvb-dibusb-mb=y
 CONFIG_PKG_firmware-dvb-dibusb-mc=y
 CONFIG_PKG_firmware-dvb-dvbsky-S9xx=y
+CONFIG_PKG_firmware-dvb-it91xx=y
 CONFIG_PKG_firmware-dvb-nxt200x=y
 CONFIG_PKG_firmware-dvb-or51132=y
 CONFIG_PKG_firmware-dvb-or51211=y
