--- a/config/defconfigs/geexbox-xbmc-imx5x-efikamx.conf
+++ b/config/defconfigs/geexbox-xbmc-imx5x-efikamx.conf
@@ -290,6 +290,7 @@ CONFIG_PKG_firmware-arm-imx5=y
 # CONFIG_PKG_firmware-dvb-dibusb-mb is not set
 # CONFIG_PKG_firmware-dvb-dibusb-mc is not set
 # CONFIG_PKG_firmware-dvb-dvbsky-S9xx is not set
+CONFIG_PKG_firmware-dvb-it91xx=y
 # CONFIG_PKG_firmware-dvb-nxt200x is not set
 # CONFIG_PKG_firmware-dvb-or51132 is not set
 # CONFIG_PKG_firmware-dvb-or51211 is not set
