--- a/config/defconfigs/base-armada5xx-cubox.conf
+++ b/config/defconfigs/base-armada5xx-cubox.conf
@@ -270,6 +270,7 @@ CONFIG_PKG_mpd=m
 # CONFIG_PKG_firmware-dvb-dibusb-mb is not set
 # CONFIG_PKG_firmware-dvb-dibusb-mc is not set
 # CONFIG_PKG_firmware-dvb-dvbsky-S9xx is not set
+# CONFIG_PKG_firmware-dvb-it91xx is not set
 # CONFIG_PKG_firmware-dvb-nxt200x is not set
 # CONFIG_PKG_firmware-dvb-or51132 is not set
 # CONFIG_PKG_firmware-dvb-or51211 is not set
