--- a/config/defconfigs/geexbox-freevo-i386-generic.conf
+++ b/config/defconfigs/geexbox-freevo-i386-generic.conf
@@ -314,6 +314,7 @@ CONFIG_PKG_ntfs-3g=y
 # CONFIG_PKG_firmware-dvb-dibusb-mb is not set
 # CONFIG_PKG_firmware-dvb-dibusb-mc is not set
 # CONFIG_PKG_firmware-dvb-dvbsky-S9xx is not set
+# CONFIG_PKG_firmware-dvb-it91xx is not set
 # CONFIG_PKG_firmware-dvb-nxt200x is not set
 # CONFIG_PKG_firmware-dvb-or51132 is not set
 # CONFIG_PKG_firmware-dvb-or51211 is not set
