--- a/packages/xbmc/build
+++ b/packages/xbmc/build
@@ -57,8 +57,8 @@ CFG_TEGRA="--disable-tegra"
 if [ "$TARGET_MACHINE" = raspberrypi ]; then
   EXTRA_CONFIG="$EXTRA_CONFIG --with-platform=raspberry-pi"
   if pkg_uses $1 openmax; then
-    local_cflags="-I$LIB_PREFIX/include/interface/vcos/pthreads/"
-    local_cxxflags="-I$LIB_PREFIX/include/interface/vcos/pthreads/"
+    local_cflags="-I$LIB_PREFIX/include/interface/vcos/pthreads -I$LIB_PREFIX/include/interface/vmcs_host/linux"
+    local_cxxflags="-I$LIB_PREFIX/include/interface/vcos/pthreads -I$LIB_PREFIX/include/interface/vmcs_host/linux"
   fi
 fi
 
