--- a/packages/mc/build
+++ b/packages/mc/build
@@ -8,8 +8,10 @@ cd $PKG_BUILD_DIR
 export fu_cv_sys_stat_statfs2_bsize=yes
 
 do_configure \
-	--without-gpm-mouse \
-	--with-screen=ncurses \
+  --without-gpm-mouse \
+  --with-screen=ncurses \
+  --without-x \
+  --without-diff-viewer \
 
 make
 make_install
