--- a/packages/busybox/config/busybox.conf
+++ b/packages/busybox/config/busybox.conf
@@ -253,7 +253,7 @@ CONFIG_OD=y
 # CONFIG_PRINTENV is not set
 CONFIG_PRINTF=y
 CONFIG_PWD=y
-# CONFIG_READLINK is not set
+CONFIG_READLINK=y
 # CONFIG_FEATURE_READLINK_FOLLOW is not set
 # CONFIG_REALPATH is not set
 CONFIG_RM=y
