vdr-plugin-vnsiserver : fix build with recent update of xbmc-pvr-addons

--- a/packages/vdr-plugin-vnsiserver/build
+++ b/packages/vdr-plugin-vnsiserver/build
@@ -10,11 +10,14 @@ get_meta $1
 $SCRIPTS/unpack $PKG_PARENT
 
 cd $BUILD/${PKG_PARENT}-${PKG_VERSION}
-
+export VDRDIR="$ROOT/$BUILD/vdr-${VDR_VERSION}"
 cd addons/pvr.vdr.vnsi/vdr-plugin-vnsiserver
+
 make all \
   VDRDIR="$ROOT/$BUILD/vdr-${VDR_VERSION}" \
-  LIBDIR="."
+  LIBDIR="." \
+  CFLAGS="$CFLAGS" \
+  CXXFLAGS="$CXXFLAGS"
 
 mkdir -p $ROOT/$PKG_BUILD_DIR
 mv libvdr* $ROOT/$PKG_BUILD_DIR
