eglibc: upgrade to 2.17-r22106

--- a/packages/eglibc/build
+++ b/packages/eglibc/build
@@ -112,6 +112,7 @@ do_gcc_strip_gold
              --cache-file=config.cache \
              --without-cvs \
              --without-gd \
+             --enable-obsolete-rpc \
              $DEBUG_CONFIG
 make
 
