systemd: upgrade to 196

--- a/packages/systemd/build
+++ b/packages/systemd/build
@@ -29,6 +29,9 @@ do_configure \
             --disable-quotacheck \
             --disable-readahead \
             --disable-manpages \
+            --disable-qrencode \
+            --disable-microhttpd \
+            --without-python \
             --with-distro=other \
             --with-dbussessionservicedir=/usr/share/dbus-1/services \
             --with-dbussystemservicedir=/usr/share/dbus-1/system-services \
