i18n-locales: skip broken locales

--- a/packages/i18n-locales/build
+++ b/packages/i18n-locales/build
@@ -45,7 +45,7 @@ for loc in $SUPPORTED_INCLUDED_LOCALES; do
       -i "$EGLIBC_DIR/localedata/locales/$INPUT" \
       -A locale.alias \
       --prefix "$ROOT/$BUILD/$1" \
-      $LOCALE
+      $LOCALE || echo "Warning: $LOCALE/$CHARSET failed to build, skipping..."
 done
 
 exit 0
