defconfigs: refresh geexbox-xbmc-bcm2708-raspberrypi config

--- a/config/defconfigs/geexbox-xbmc-bcm2708-raspberrypi.conf
+++ b/config/defconfigs/geexbox-xbmc-bcm2708-raspberrypi.conf
@@ -107,6 +107,21 @@ CONFIG_OPT_INCLUDED_LOCALES=""
 CONFIG_OPT_DEFAULT_LOCALE="en_US.UTF-8"
 
 #
+# Raspberry Pi settings
+#
+CONFIG_RPI_SDTV_MODE_NTSC=y
+# CONFIG_RPI_SDTV_MODE_PAL is not set
+# CONFIG_RPI_SDTV_MODE_JPN_NTSC is not set
+# CONFIG_RPI_SDTV_MODE_BRA_PAL is not set
+CONFIG_RPI_SDTV_ASPECT_4_3=y
+# CONFIG_RPI_SDTV_ASPECT_14_9 is not set
+# CONFIG_RPI_SDTV_ASPECT_16_9 is not set
+CONFIG_OPT_RPI_SDTV_COLORBURST=y
+CONFIG_OPT_RPI_USE_CMA=y
+CONFIG_OPT_RPI_MPEG2_LICENSE=""
+CONFIG_OPT_RPI_VC1_LICENSE=""
+
+#
 # Features
 #
 CONFIG_TAINT=y
@@ -1174,6 +1189,8 @@ CONFIG_PKG_xbmc-addon-geexbox-updater=y
 # CONFIG_PKG_xruler is not set
 # CONFIG_PKG_xvinfo is not set
 CONFIG_OPT_OPTIMIZATIONS="default"
+CONFIG_OPT_RPI_SDTV_MODE=0
+CONFIG_OPT_RPI_SDTV_ASPECT=1
 CONFIG_OPT_FPU_OPTIMIZATIONS="vfp2"
 CONFIG_OPT_TOOLCHAIN_TYPE="linaro"
 CONFIG_OPT_COMPRESSION_METHOD="gzip"
