systemd : build without python

--- a/packages/systemd/build
+++ b/packages/systemd/build
@@ -44,6 +44,7 @@ do_configure \
             --with-pamlibdir= \
             --with-rootprefix= \
             --with-rootlibdir=/lib \
+            --without-python \
 
 make
 make_install
