libcec: make it work with raspberrypi

--- a/packages/libcec/build
+++ b/packages/libcec/build
@@ -13,7 +13,16 @@ else
   CUBOX_FLAGS="--disable-cubox"
 fi
 
-do_configure $CUBOX_FLAGS
+if [ "$TARGET_MACHINE" = raspberrypi ]; then
+  RPI_FLAGS="--enable-rpi --with-rpi-include-path=$LIB_PREFIX/include --with-rpi-lib-path=$LIB_PREFIX/lib"
+  local_cxxflags="-I$LIB_PREFIX/include/interface/vcos/pthreads -I$LIB_PREFIX/include/interface/vmcs_host/linux"
+else
+  RPI_FLAGS="--disable-rpi"
+fi
+
+do_configure \
+  $CUBOX_FLAGS \
+  $RPI_FLAGS \
 
 make
 make_install
