defconfigs: add pvr packages to geexbox-xbmc-bcm2708-raspberrypi config

--- a/config/defconfigs/geexbox-xbmc-bcm2708-raspberrypi.conf
+++ b/config/defconfigs/geexbox-xbmc-bcm2708-raspberrypi.conf
@@ -652,8 +652,8 @@ CONFIG_PKG_pastebincl=y
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
 CONFIG_PKG_pvr=y
-# CONFIG_OPT_pvr_tvheadend is not set
-# CONFIG_OPT_pvr_vdr is not set
+CONFIG_OPT_pvr_tvheadend=y
+CONFIG_OPT_pvr_vdr=y
 # CONFIG_PKG_rsync is not set
 # CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
@@ -723,7 +723,8 @@ CONFIG_PKG_mpd=m
 # CONFIG_PKG_ti-dsp is not set
 # CONFIG_PKG_ti-omap3-omxil is not set
 # CONFIG_PKG_ti-omap4-domx is not set
-# CONFIG_PKG_tvheadend is not set
+CONFIG_PKG_tvheadend=y
+# CONFIG_OPT_tvheadend_zeroconf is not set
 CONFIG_PKG_vdr=y
 # CONFIG_PKG_vdr-avards is not set
 # CONFIG_PKG_vdr-devstatus is not set
@@ -731,7 +732,7 @@ CONFIG_PKG_vdr=y
 # CONFIG_PKG_vdr-dvbapi is not set
 # CONFIG_PKG_vdr-dvbsddevice is not set
 # CONFIG_PKG_vdr-dvd is not set
-# CONFIG_PKG_vdr-dynamite is not set
+CONFIG_PKG_vdr-dynamite=y
 # CONFIG_PKG_vdr-eepg is not set
 # CONFIG_PKG_vdr-epgsearch is not set
 # CONFIG_PKG_vdr-extrecmenu is not set
@@ -748,7 +749,7 @@ CONFIG_PKG_vdr=y
 # CONFIG_PKG_vdr-osdteletext is not set
 # CONFIG_PKG_vdr-pcd is not set
 CONFIG_PKG_vdr-plugin-vnsiserver=y
-# CONFIG_PKG_vdr-plugin-xvdr is not set
+CONFIG_PKG_vdr-plugin-xvdr=y
 # CONFIG_PKG_vdr-pvr350 is not set
 # CONFIG_PKG_vdr-pvrinput is not set
 # CONFIG_PKG_vdr-radio is not set
@@ -805,9 +806,9 @@ CONFIG_OPT_xbmc_alsa=y
 CONFIG_PKG_xbmc-addon-bluecop=y
 CONFIG_PKG_xbmc-addon-navi-x=y
 CONFIG_PKG_xbmc-addon-vuplus=y
-# CONFIG_PKG_xbmc-addon-xvdr is not set
+CONFIG_PKG_xbmc-addon-xvdr=y
 # CONFIG_PKG_xbmc-eventclient is not set
-# CONFIG_PKG_xbmc-pvr-addons is not set
+CONFIG_PKG_xbmc-pvr-addons=y
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
 # CONFIG_PKG_xine-ui is not set
