[omap4] gst-ducati : bump version to 1.6.7.20 , note : $DEBUG must be enable in defconfig

--- a/packages/gst-ducati/build
+++ b/packages/gst-ducati/build
@@ -13,7 +13,8 @@ do_autoconf
 do_configure \
   --disable-nls \
   --disable-rpath \
-  $DEBUG_CONFIG \
+
+#  $DEBUG_CONFIG \
 
 make ERROR_CFLAGS="-Wall -Wdeclaration-after-statement -Wvla -Wpointer-arith"
 make_install
