[omap4] update defconfig

--- a/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
+++ b/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
@@ -55,10 +55,6 @@ CONFIG_TARGET_CPU_cortex-a9=y
 # CONFIG_TARGET_CPU_cortex-m1 is not set
 # CONFIG_TARGET_CPU_cortex-m0 is not set
 CONFIG_OPT_TARGET_CPU="cortex-a9"
-CONFIG_OMAP_DISPLAY_HDMI=y
-# CONFIG_OMAP_DISPLAY_DVI is not set
-# CONFIG_OMAP_DISPLAY_DSI is not set
-# CONFIG_OMAP_DISPLAY_DPI is not set
 # CONFIG_FPU_OPTIMIZATIONS_VFP2 is not set
 # CONFIG_FPU_OPTIMIZATIONS_VFP3 is not set
 # CONFIG_FPU_OPTIMIZATIONS_VFP3D16 is not set
@@ -121,6 +117,10 @@ CONFIG_OPT_SUB_CHARSET="en"
 CONFIG_LOCALE=y
 CONFIG_OPT_INCLUDED_LOCALES="en_US.UTF-8"
 CONFIG_OPT_DEFAULT_LOCALE="en_US.UTF-8"
+CONFIG_OMAP_DISPLAY_HDMI=y
+# CONFIG_OMAP_DISPLAY_DVI is not set
+# CONFIG_OMAP_DISPLAY_DSI is not set
+# CONFIG_OMAP_DISPLAY_DPI is not set
 
 #
 # Features
@@ -201,7 +201,7 @@ CONFIG_USE_sdl=y
 # Misc
 #
 CONFIG_USE_devtools=y
-# CONFIG_OPT_DEBUG is not set
+CONFIG_OPT_DEBUG=y
 
 #
 # Network
@@ -250,10 +250,11 @@ CONFIG_PKG_opkg=y
 # CONFIG_PKG_acx is not set
 # CONFIG_PKG_ar6k is not set
 CONFIG_PKG_cryptodev=y
-# CONFIG_PKG_cwiid is not set
+CONFIG_PKG_cwiid=m
 # CONFIG_PKG_drivers-jmicron-ethernet is not set
-# CONFIG_PKG_eventlircd is not set
-# CONFIG_PKG_lirc is not set
+CONFIG_PKG_eventlircd=m
+CONFIG_PKG_lirc=m
+CONFIG_OPT_lirc_devtools=y
 # CONFIG_PKG_s2-liplianin is not set
 # CONFIG_PKG_sgx530-OMAP34xx-drv is not set
 CONFIG_PKG_sgx540-OMAP44xx-drv=y
@@ -268,10 +269,9 @@ CONFIG_PKG_LVM=y
 # CONFIG_PKG_curlftpfs is not set
 # CONFIG_PKG_e2fsprogs is not set
 CONFIG_PKG_fuse=y
-# CONFIG_PKG_fuse-exfat is not set
-# CONFIG_PKG_fuseiso is not set
+CONFIG_PKG_fuse-exfat=m
+CONFIG_PKG_fuseiso=m
 # CONFIG_PKG_gnu-fdisk is not set
-# CONFIG_PKG_mpd is not set
 # CONFIG_PKG_mtd-utils is not set
 CONFIG_PKG_nfs-utils=y
 CONFIG_PKG_ntfs-3g=y
@@ -493,7 +493,7 @@ CONFIG_OPT_libdvdread_dvdcss=y
 CONFIG_PKG_libevent=y
 CONFIG_PKG_libexif=y
 CONFIG_PKG_libffi=y
-# CONFIG_PKG_libftdi is not set
+CONFIG_PKG_libftdi=m
 # CONFIG_PKG_libg7221 is not set
 CONFIG_PKG_libgcrypt=y
 # CONFIG_PKG_libgles-gc is not set
@@ -737,6 +737,7 @@ CONFIG_PKG_libdvdcss=y
 # CONFIG_PKG_mali400 is not set
 # CONFIG_PKG_media-ctl is not set
 # CONFIG_PKG_mex is not set
+# CONFIG_PKG_mpd is not set
 # CONFIG_PKG_mythplugins is not set
 # CONFIG_PKG_myththemes is not set
 # CONFIG_PKG_mythtv is not set
@@ -850,7 +851,9 @@ CONFIG_PKG_amionline=y
 # CONFIG_PKG_automounter-nfs is not set
 # CONFIG_PKG_automounter-smb is not set
 CONFIG_PKG_bftpd=y
-# CONFIG_PKG_bluez is not set
+CONFIG_PKG_bluez=m
+CONFIG_OPT_bluez_devtools=y
+CONFIG_OPT_bluez_alsa=y
 CONFIG_PKG_connman=y
 CONFIG_OPT_connman_wifi=y
 # CONFIG_OPT_connman_bluetooth is not set
@@ -1060,7 +1063,7 @@ CONFIG_PKG_i18n-locales=y
 CONFIG_PKG_kmod=y
 CONFIG_PKG_linux=y
 CONFIG_OPT_linux_alsa=y
-# CONFIG_OPT_linux_bluetooth is not set
+CONFIG_OPT_linux_bluetooth=y
 # CONFIG_OPT_linux_dab is not set
 CONFIG_OPT_linux_dvb=y
 CONFIG_OPT_linux_ethernet=y
