Undo accidently pushed changes

--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -61,7 +61,7 @@ CONFIG_FPU_OPTIMIZATIONS_VFP3D16=y
 # CONFIG_FPU_OPTIMIZATIONS_NEON is not set
 # CONFIG_FPU_OPTIMIZATIONS_NONE is not set
 CONFIG_OPT_ARM_HARDFLOAT_ABI=y
-# CONFIG_OPT_THUMB is not set
+CONFIG_OPT_THUMB=y
 
 #
 # Toolchain settings
@@ -102,7 +102,7 @@ CONFIG_OPT_CONCURRENCY_MAKE_LEVEL=3
 # CONFIG_OPT_TARGET_ISO is not set
 CONFIG_OPT_TARGET_FLAT=y
 # CONFIG_OPT_TARGET_PXE is not set
-# CONFIG_OPT_TARGET_TARBALL is not set
+CONFIG_OPT_TARGET_TARBALL=y
 # CONFIG_OPT_TARGET_EXT2FS is not set
 # CONFIG_OPT_TARGET_INITRAMFS is not set
 CONFIG_OPT_PACKAGE_REPO=y
