--- a/config/defconfigs/geexbox-xbmc-bcm2708-raspberrypi.conf
+++ b/config/defconfigs/geexbox-xbmc-bcm2708-raspberrypi.conf
@@ -92,7 +92,7 @@ CONFIG_OPT_CONCURRENCY_MAKE_LEVEL=3
 # CONFIG_OPT_TARGET_ISO is not set
 CONFIG_OPT_TARGET_FLAT=y
 # CONFIG_OPT_TARGET_PXE is not set
-# CONFIG_OPT_TARGET_TARBALL not set
+CONFIG_OPT_TARGET_TARBALL=y
 # CONFIG_OPT_TARGET_EXT2FS is not set
 # CONFIG_OPT_TARGET_INITRAMFS is not set
 CONFIG_OPT_PACKAGE_REPO=y
