--- a/config/platforms/arm/armada5xx/linux.conf
+++ b/config/platforms/arm/armada5xx/linux.conf
@@ -2499,7 +2499,7 @@ CONFIG_USB_EHCI_TT_NEWSCHED=y
 # USB Device Class drivers
 #
 CONFIG_USB_ACM=m
-# CONFIG_USB_PRINTER is not set
+CONFIG_USB_PRINTER=m
 CONFIG_USB_WDM=y
 # CONFIG_USB_TMC is not set
 
