cups : add a script to fix perms

--- a/packages/cups/config/cupsd.conf
+++ b/packages/cups/config/cupsd.conf
@@ -10,7 +10,7 @@
 LogLevel warn
 
 # Administrator user group...
-SystemGroup lpadmin
+SystemGroup root
 
 
 # Only listen for connections from the local machine.
