--- a/packages/cups/unit/cups.service
+++ b/packages/cups/unit/cups.service
@@ -4,6 +4,7 @@ After=syslog.target
 
 [Service]
 Type=forking
+ExecStartPre=/usr/bin/cups-fix-perms
 ExecStartPre=/usr/sbin/cupsd -t
 ExecStart=/usr/sbin/cupsd
 ExecStartPost=/usr/bin/udevadm trigger --subsystem-match=usb --attr-match=bInterfaceClass=07 --attr-match=bInterfaceSubClass=01 --action=add
