gcc-final : fix build

--- a/packages/gcc-final/build
+++ b/packages/gcc-final/build
@@ -2,6 +2,10 @@
 
 . config/options
 
+if [ "$TARGET_ARCH" = x86_64 ] ; then
+  ln -s lib $SYSROOT_PREFIX/usr/lib64
+fi
+
 $SCRIPTS/unpack gcc-$TOOLCHAIN_TYPE
 
 setup_toolchain host
