--- a/config/defconfigs/base-imx6-sabrelite.conf
+++ b/config/defconfigs/base-imx6-sabrelite.conf
@@ -228,6 +228,7 @@ CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_drivers-jmicron-ethernet is not set
 # CONFIG_PKG_eventlircd is not set
 # CONFIG_PKG_gutenprint is not set
+# CONFIG_PKG_hplip is not set
 # CONFIG_PKG_lirc is not set
 # CONFIG_PKG_s2-liplianin is not set
 # CONFIG_PKG_sgx530-OMAP34xx-drv is not set
@@ -529,6 +530,7 @@ CONFIG_PKG_ncurses=y
 # CONFIG_OPT_ncurses_terminfo is not set
 # CONFIG_PKG_ncursesw is not set
 # CONFIG_PKG_neon is not set
+# CONFIG_PKG_net-snmp is not set
 CONFIG_PKG_nettle=y
 # CONFIG_PKG_nss-mdns is not set
 CONFIG_PKG_openssl=y
