--- a/config/defconfigs/base-omap4-pandaboard.conf
+++ b/config/defconfigs/base-omap4-pandaboard.conf
@@ -232,6 +232,7 @@ CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_drivers-jmicron-ethernet is not set
 # CONFIG_PKG_eventlircd is not set
 # CONFIG_PKG_gutenprint is not set
+# CONFIG_PKG_hplip is not set
 # CONFIG_PKG_lirc is not set
 # CONFIG_PKG_s2-liplianin is not set
 # CONFIG_PKG_sgx530-OMAP34xx-drv is not set
@@ -465,6 +466,7 @@ CONFIG_PKG_libusb-compat=y
 # CONFIG_PKG_ncurses is not set
 # CONFIG_PKG_ncursesw is not set
 # CONFIG_PKG_neon is not set
+# CONFIG_PKG_net-snmp is not set
 CONFIG_PKG_nettle=y
 # CONFIG_PKG_nss-mdns is not set
 # CONFIG_PKG_openssl is not set
