--- a/config/defconfigs/geexbox-freevo-i386-generic.conf
+++ b/config/defconfigs/geexbox-freevo-i386-generic.conf
@@ -277,6 +277,7 @@ CONFIG_PKG_crystalhd=y
 CONFIG_PKG_drivers-jmicron-ethernet=m
 # CONFIG_PKG_eventlircd is not set
 # CONFIG_PKG_gutenprint is not set
+# CONFIG_PKG_hplip is not set
 CONFIG_PKG_lirc=y
 CONFIG_OPT_lirc_devtools=y
 # CONFIG_PKG_ndiswrapper is not set
@@ -596,6 +597,7 @@ CONFIG_PKG_ncurses=y
 CONFIG_OPT_ncurses_terminfo=y
 # CONFIG_PKG_ncursesw is not set
 # CONFIG_PKG_neon is not set
+# CONFIG_PKG_net-snmp is not set
 CONFIG_PKG_nettle=y
 # CONFIG_PKG_nss-mdns is not set
 CONFIG_PKG_openssl=y
