--- a/config/defconfigs/geexbox-xbmc-bcm2708-raspberrypi.conf
+++ b/config/defconfigs/geexbox-xbmc-bcm2708-raspberrypi.conf
@@ -254,6 +254,7 @@ CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_drivers-jmicron-ethernet is not set
 CONFIG_PKG_eventlircd=y
 # CONFIG_PKG_gutenprint is not set
+# CONFIG_PKG_hplip is not set
 CONFIG_PKG_lirc=y
 CONFIG_OPT_lirc_devtools=y
 # CONFIG_PKG_s2-liplianin is not set
@@ -563,6 +564,7 @@ CONFIG_PKG_ncurses=y
 # CONFIG_OPT_ncurses_terminfo is not set
 CONFIG_PKG_ncursesw=y
 CONFIG_PKG_neon=m
+# CONFIG_PKG_net-snmp is not set
 CONFIG_PKG_nettle=y
 # CONFIG_PKG_nss-mdns is not set
 CONFIG_PKG_openssl=y
