--- a/config/defconfigs/geexbox-xbmc-i386-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-i386-generic.conf
@@ -279,6 +279,7 @@ CONFIG_PKG_cwiid=y
 CONFIG_PKG_drivers-jmicron-ethernet=m
 CONFIG_PKG_eventlircd=y
 # CONFIG_PKG_gutenprint is not set
+# CONFIG_PKG_hplip is not set
 CONFIG_PKG_lirc=y
 CONFIG_OPT_lirc_devtools=y
 CONFIG_PKG_ndiswrapper=m
@@ -596,6 +597,7 @@ CONFIG_PKG_ncurses=y
 # CONFIG_OPT_ncurses_terminfo is not set
 CONFIG_PKG_ncursesw=y
 CONFIG_PKG_neon=m
+# CONFIG_PKG_net-snmp is not set
 CONFIG_PKG_nettle=y
 # CONFIG_PKG_nss-mdns is not set
 CONFIG_PKG_openssl=y
