--- a/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
+++ b/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
@@ -254,6 +254,7 @@ CONFIG_PKG_cwiid=m
 # CONFIG_PKG_drivers-jmicron-ethernet is not set
 CONFIG_PKG_eventlircd=m
 # CONFIG_PKG_gutenprint is not set
+# CONFIG_PKG_hplip is not set
 CONFIG_PKG_lirc=m
 CONFIG_OPT_lirc_devtools=y
 # CONFIG_PKG_s2-liplianin is not set
@@ -577,6 +578,7 @@ CONFIG_PKG_ncurses=y
 # CONFIG_OPT_ncurses_terminfo is not set
 CONFIG_PKG_ncursesw=y
 CONFIG_PKG_neon=m
+# CONFIG_PKG_net-snmp is not set
 CONFIG_PKG_nettle=y
 # CONFIG_PKG_nss-mdns is not set
 CONFIG_PKG_openssl=y
