--- a/config/defconfigs/geexbox-xbmc-ux500-snowball-v5.conf
+++ b/config/defconfigs/geexbox-xbmc-ux500-snowball-v5.conf
@@ -247,6 +247,7 @@ CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_drivers-jmicron-ethernet is not set
 # CONFIG_PKG_eventlircd is not set
 # CONFIG_PKG_gutenprint is not set
+# CONFIG_PKG_hplip is not set
 # CONFIG_PKG_lirc is not set
 # CONFIG_PKG_s2-liplianin is not set
 # CONFIG_PKG_sgx530-OMAP34xx-drv is not set
@@ -568,6 +569,7 @@ CONFIG_PKG_ncurses=m
 CONFIG_OPT_ncurses_terminfo=y
 # CONFIG_PKG_ncursesw is not set
 CONFIG_PKG_neon=m
+# CONFIG_PKG_net-snmp is not set
 CONFIG_PKG_nettle=y
 # CONFIG_PKG_nss-mdns is not set
 CONFIG_PKG_openssl=y
