--- a/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
@@ -262,6 +262,7 @@ CONFIG_PKG_crystalhd=y
 CONFIG_PKG_drivers-jmicron-ethernet=m
 CONFIG_PKG_eventlircd=y
 # CONFIG_PKG_gutenprint is not set
+# CONFIG_PKG_hplip is not set
 CONFIG_PKG_lirc=y
 CONFIG_OPT_lirc_devtools=y
 # CONFIG_PKG_ndiswrapper is not set
@@ -578,6 +579,7 @@ CONFIG_PKG_ncurses=y
 # CONFIG_OPT_ncurses_terminfo is not set
 # CONFIG_PKG_ncursesw is not set
 CONFIG_PKG_neon=m
+# CONFIG_PKG_net-snmp is not set
 CONFIG_PKG_nettle=y
 # CONFIG_PKG_nss-mdns is not set
 CONFIG_PKG_openssl=y
