xf86-video-virtualbox : bump version to 4.2.6-82870

--- a/packages/xf86-video-virtualbox/build
+++ b/packages/xf86-video-virtualbox/build
@@ -3,6 +3,8 @@
 . config/options
 
 get_meta $1
+myver=`echo $PKG_VERSION |cut -d- -f1`
+echo $myver
 
 $SCRIPTS/build linux
 
@@ -22,13 +24,13 @@ fi
 
 tar xjf $fic -C work
 
-make -C work/src/vboxguest-4.2.4 \
+make -C work/src/vboxguest-$myver \
      CC=${CC} \
      KERN_VER=$(kernel_version) \
      KERN_DIR=$(kernel_path)
 
 mkdir -p .install/lib/modules/$(kernel_version)/kernel/drivers/misc
-cp work/src/vboxguest-4.2.4/*.ko .install/lib/modules/$(kernel_version)/kernel/drivers/misc
+cp work/src/vboxguest-$myver/*.ko .install/lib/modules/$(kernel_version)/kernel/drivers/misc
 
 get_meta xorg-server
 XVER=`echo $PKG_VERSION | sed 's/\.//' | cut -d. -f1`
